--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- Link to Bootstrap's CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 <body>
     <header>
-
+        <div id="title" class="container-fluid my-auto">
+            <h1 class="text-center text-white fw"> Weather Dashboard</h1>
+        </div>
     </header>
     <main>
         
