Add search title, input and button; html & css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         </div>
     </header>
     <main>
+        <div class="row">
+            <div class="col-md-4 container-md">
+                <form class="mb-3 pb-3 border-bottom border-success">
+                    <label for="inputSearch" class="col-form-label fw-bold fs-3">Search for a City:</label>
+                    <div class="d-grid gap-3">
+                        <input type="text" class="form-control" placeholder='Search' id="inputSearch">
+                        <button type="submit" class="btn text-white" id="search">Search</button>
+                    </div>
+                </form>
+            </div>
+        </div>
         
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
