Add saved search button, and function; html, js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <button type="submit" class="btn text-white" id="search">Search</button>
                     </div>
                 </form>
+                <div class="d-grid gap-3" id="searchButtonList"></div>
             </div>
             <div class="col-md-8 container-md">
                 <div id='today' class="p-2 border border-2">
