--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
                     <p> Wind: <span id='windToday'></span></p>
                     <p> Humidity: <span id='humidityToday'></span></p>
                 </div>
+            
+            <div>
+                <h3>5-Day Forecast:</h3>
             </div>
+            <div class="row" id="fiveDayForecast">
+              
+            </div>
+
+        </div>
 
 
 
