--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="m-2">
     <header>
         <div id="title" class="container-fluid my-auto">
-            <h1 class="text-center text-white fw"> Weather Dashboard</h1>
+            <h1 class="text-center text-white lh-base"> Weather Dashboard</h1>
         </div>
     </header>
     <main>
@@ -37,7 +37,7 @@
                 </div>
             
             <div>
-                <h3>5-Day Forecast:</h3>
+                <h3 class="my-2">5-Day Forecast:</h3>
             </div>
             <div class="row" id="fiveDayForecast">
               
