--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div>
                 <h3 class="my-2">5-Day Forecast:</h3>
             </div>
-            <div class="row" id="fiveDayForecast">
+            <div class="row gy-3" id="fiveDayForecast">
               
             </div>
 
